# mynn

./: Cargo.toml  README.md
src/: activations.rs  lib.rs  matrix.rs  network.rs
