[package]
name = "mynn"
version = "0.1.2"
edition = "2021"
authors = ["Jason Alexander <jasonalexander.dev@gmail.com>"]
description = "Hobby no_std neural network. "
readme = "README.md"
repository = "https://github.com/jasonalexander-ja/mynn"
license = "MIT"
keywords = ["no_std", "machine_learning", "neural_network", "experimental", "embedded"]
categories = ["no-std", "science", "embedded"]

[dependencies]
libm = "0.2.11"
micromath = "2.1.0"
fastrand = { version = "2.3.0", default-features = false }

[features]
f32 = []
recurse-opt = []

